add methods average baÃlance
