# src/main/java/com/sgi/transaction/infrastructure/controller/TransactionController.java
@@ -1,6 +1,7 @@
 package com.sgi.transaction.infrastructure.controller;
 
 import com.sgi.transaction.domain.ports.in.TransactionService;
+import com.sgi.transaction.infrastructure.dto.AverageReportResponse;
 import com.sgi.transaction.infrastructure.dto.TransactionRequest;
 import com.sgi.transaction.infrastructure.dto.TransactionResponse;
 import org.springframework.http.HttpStatus;
@@ -25,8 +26,7 @@ public class TransactionController implements V1Api {
     }
 
     @Override
-    public Mono<ResponseEntity<TransactionResponse>> createTransaction(Mono<TransactionRequest> transactionRequest,
-                                                                       ServerWebExchange exchange) {
+    public Mono<ResponseEntity<TransactionResponse>> createTransaction(Mono<TransactionRequest> transactionRequest, ServerWebExchange exchange) {
         return transactionService.createTransaction(transactionRequest)
                 .map(transactionResponse ->
                         ResponseEntity.status(HttpStatus.CREATED).body(transactionResponse));
@@ -44,29 +44,33 @@ public class TransactionController implements V1Api {
     }
 
     @Override
-    public Mono<ResponseEntity<Flux<TransactionResponse>>> getCommissionsByProductAndPeriod(
-            String productId, LocalDate startDate, LocalDate endDate, ServerWebExchange exchange) {
+    public Mono<ResponseEntity<Flux<TransactionResponse>>> getCommissionsByProductAndPeriod(String productId, LocalDate startDate, LocalDate endDate, ServerWebExchange exchange) {
         return Mono.fromSupplier(() -> ResponseEntity.ok().body(transactionService
                         .getCommissionsByProductAndPeriod(productId, startDate, endDate))
         );
     }
 
     @Override
-    public Mono<ResponseEntity<TransactionResponse>> getTransactionById(String id, ServerWebExchange exchange) {
-        return transactionService.getTransactionById(id)
+    public Mono<ResponseEntity<AverageReportResponse>> getDailyAverageBalancesForClient(String clientId, LocalDate from, LocalDate to, ServerWebExchange exchange) {
+        return transactionService.getDailyAverageBalancesForClient(clientId, from, to)
                 .map(transactionResponse -> ResponseEntity.ok().body(transactionResponse));
     }
 
+
     @Override
-    public Mono<ResponseEntity<Flux<TransactionResponse>>> getTransactionsByProductId(String productId,
-                                                                                      ServerWebExchange exchange) {
+    public Mono<ResponseEntity<TransactionResponse>> getTransactionById(String id, ServerWebExchange exchange) {
+        return transactionService.getTransactionById(id)
+                .map(transactionResponse
+                        -> ResponseEntity.ok().body(transactionResponse));
+    }
+
+    @Override
+    public Mono<ResponseEntity<Flux<TransactionResponse>>> getTransactionsByProductId(String productId, ServerWebExchange exchange) {
         return Mono.fromSupplier(() -> ResponseEntity.ok().body(transactionService.getTransactionsByAccountId(productId)));
     }
 
     @Override
-    public Mono<ResponseEntity<TransactionResponse>> updateTransaction(String id,
-                                                                       Mono<TransactionRequest> transactionRequest,
-                                                                       ServerWebExchange exchange) {
+    public Mono<ResponseEntity<TransactionResponse>> updateTransaction(String id, Mono<TransactionRequest> transactionRequest, ServerWebExchange exchange) {
         return transactionService.updateTransaction(id, transactionRequest)
                 .map(transactionResponse -> ResponseEntity.ok().body(transactionResponse));
     }
