# src/main/java/com/sgi/transaction/infrastructure/repository/TransactionRepositoryJpa.java
@@ -1,7 +1,6 @@
 package com.sgi.transaction.infrastructure.repository;
 
 import com.sgi.transaction.domain.model.Transaction;
-import com.sgi.transaction.infrastructure.dto.TransactionResponse;
 import org.springframework.data.mongodb.repository.Query;
 import org.springframework.data.mongodb.repository.ReactiveMongoRepository;
 import reactor.core.publisher.Flux;
@@ -17,6 +16,8 @@ public interface TransactionRepositoryJpa extends ReactiveMongoRepository<Transa
     Flux<Transaction> findAllByProductId(String bankAccountId);
 
     @Query("{ 'productId': ?0, 'commission': { $ne: null, $gt: 0 }, 'createdDate': { $gte: ?1, $lte: ?2 } }")
-    Flux<TransactionResponse> findCommissionsByProductAndDateRange(String productId, LocalDate startDate, LocalDate endDate);
+    Flux<Transaction> findCommissionsByProductAndDateRange(String productId, LocalDate startDate, LocalDate endDate);
+
+    Flux<Transaction> findByClientIdAndCreatedDateBetween(String clientId, LocalDate startDate, LocalDate endDate);
 
 }
