# src/main/resources/openapi.yml
@@ -5,7 +5,7 @@ info:
 servers:
   - url: http://localhost:8083
 paths:
-  /v1/transaction:
+  /v1/transactions:
     get:
       summary: Retrieve all transaction
       operationId: getAllTransactions
@@ -85,12 +85,12 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
-  /v1/transaction/{id}:
+  /v1/transaction/{transactionId}:
     get:
       summary: Retrieve a transaction by ID
       operationId: getTransactionById
       parameters:
-        - name: id
+        - name: transactionId
           in: path
           required: true
           schema:
@@ -178,6 +178,53 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+  /v1/transaction/{clientId}/average-balances:
+    get:
+      summary: Retrieve daily average balances for the current month
+      operationId: getDailyAverageBalancesForClient
+      parameters:
+        - name: clientId
+          in: path
+          required: true
+          schema:
+            type: string
+          description: The unique identifier of the client.
+        - name: from
+          in: query
+          required: true
+          schema:
+            type: string
+            format: date
+          description:
+            Start date of the period (format: YYYY-MM-DD)
+        - name: to
+          in: query
+          required: true
+          schema:
+            type: string
+            format: date
+          description:
+            End date of the period (format: YYYY-MM-DD)
+      responses:
+        '200':
+          description: Daily average balances for all credit and bank products owned by the client in the current month.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AverageReportResponse'
+        '404':
+          description: No products or transactions found for the specified client in the current month.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '500':
+          description: Internal server error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
   /v1/transaction/{productId}/commissions:
     get:
       summary: Retrieve commissions for a product in a given time period
@@ -226,7 +273,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-
 components:
   schemas:
     TransactionRequest:
@@ -279,6 +325,9 @@ components:
         balance:
           type: number
           format: double
+        createdDate:
+          type: string
+          format: date-time
     ErrorResponse:
       type: object
       required:
@@ -297,3 +346,47 @@ components:
           type: string
           format: date-time
 
+    DailyAverages:
+      type: object
+      required:
+        - date
+        - averageBalance
+      description: List of daily average balances for the product.
+      properties:
+        date:
+          type: string
+          format: date
+          description: The date for which the average balance is calculated.
+        averageBalance:
+          type: number
+          format: double
+          description: The average balance for the product on the specified date.
+
+    Product:
+      type: object
+      required:
+        - productId
+        - dailyAverages
+      properties:
+        productId:
+          type: string
+          description: Identifier of the product.
+        dailyAverages:
+          type: array
+          description: List of daily average balances for the product.
+          items:
+            $ref: '#/components/schemas/DailyAverages'
+
+    AverageReportResponse:
+      type: object
+      required:
+        - clientId
+        - products
+      properties:
+        clientId:
+          type: string
+        products:
+          type: array
+          description: List of products with their daily average balances.
+          items:
+            $ref: '#/components/schemas/Product'
